[package]
name = "actix-memory-repository"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.0"
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version= "0.3", features = ["env-filter", "json", "time"] }
tracing-futures = "0.2"
